--- a/visualisation/task1.html
+++ b/visualisation/task1.html
@@ -7,20 +7,29 @@
         html {
             font-family: sans-serif;
         }
+
     </style>
 </head>
 <body>
 <p>
-    <label><input type="checkbox" id="show-labels-checkbox"> Отображать имена вершин</label>
+    <label>Дерево в формате GraphML <input type="file" id="file-selector"></label>
 </p>
 <p>
-    <label>Дерево в формате GraphML <input type="file" id="file-selector"></label>
+    <label><input type="checkbox" id="show-labels-checkbox"> Отображать имена вершин</label>
 </p>
 <hr/>
 <section>
+    <a
+            href="https://github.com/valentiay/visualisation/blob/main/src/main/scala/task1/positioning.scala"
+            target="_blank"
+    >Исходный код</a> на Scala скомпилирован в Javascript с помощью ScalaJS
+    <br/>
     Александр Валентинов, М05-012е
 </section>
-<div id="visualisation"><canvas id="canvas" width="800" height="600"></canvas></div>
+<hr/>
+<section>
+    <canvas id="canvas" width="800" height="600"></canvas>
+</section>
 <script type="text/javascript" src="task1.js"></script>
 </body>
 </html>
