--- a/visualisation/task2.html
+++ b/visualisation/task2.html
@@ -2,17 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tree Visualisation</title>
+    <title>Graph Visualisation</title>
     <style>
         html {
             font-family: sans-serif;
         }
 
+
+
     </style>
 </head>
 <body>
 <p>
-    <label>Дерево в формате GraphML <input type="file" id="file-selector"></label>
+    <label>Граф в формате GraphML <input type="file" id="file-selector"></label>
+</p>
+<p>
+    <label>Максимальная ширина <input type="number" id="width-selector" min="1"></label>
 </p>
 <p>
     <label><input type="checkbox" id="show-labels-checkbox"> Отображать имена вершин</label>
@@ -20,9 +25,11 @@
 <hr/>
 <section>
     <a
-            href="https://github.com/valentiay/visualisation/blob/main/task1/src/main/scala/task1/positioning.scala"
+            href="https://github.com/valentiay/visualisation/blob/main/task2/src/main/scala/task2/positioning.scala"
             target="_blank"
     >Исходный код</a> на Scala скомпилирован в Javascript с помощью ScalaJS
+    <br/>
+    Ребра направлены снизу вверх
     <br/>
     Александр Валентинов, М05-012е
 </section>
@@ -30,6 +37,6 @@
 <section>
     <canvas id="canvas" width="800" height="600"></canvas>
 </section>
-<script type="text/javascript" src="task1.js"></script>
+<script type="text/javascript" src="task2.js"></script>
 </body>
 </html>
