--- a/visualisation/task2.html
+++ b/visualisation/task2.html
@@ -38,6 +38,6 @@
 <section>
     <canvas id="canvas" width="800" height="500"></canvas>
 </section>
-<script type="text/javascript" src="target/scala-2.13/task2-fastopt/main.js"></script>
+<script type="text/javascript" src="task2.js"></script>
 </body>
 </html>
